--- a/exercice6/styles.css
+++ b/exercice6/styles.css
@@ -47,10 +47,22 @@ body {
     cursor: pointer;
 }
 
-form {
+#create {
     position: fixed;
     right: 80px;
     bottom: 20px;
+    display: none;
+}
+#detail {
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid black;
+    top: 50%;
+    left: 50%;
+    margin-top: -56px;
+    margin-left: -97px;
     display: none;
 }
 #title {
